<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="4dp"
            android:text="@string/button_calc" />

        <EditText
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:id="@+id/textViewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="4dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/labelFrom" />

    <EditText
        android:id="@+id/editTextFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextInitialFrom"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/labelTo" />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextInitialTo"
        android:inputType="numberDecimal" />

    <!--  empty line -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textViewThread01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="4dp"
                android:text="@string/editTextThread01"
                />

            <EditText
                android:id="@+id/editTextThread01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_margin="4dp"
                android:inputType="none"
                android:textSize="15sp"
                android:background="#CACACA" />

        </TableRow>

        <TableRow  android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textViewThread02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="4dp"
                android:text="@string/editTextThread02"
                />

            <EditText
                android:id="@+id/editTextThread02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_margin="4dp"
                android:inputType="none"
                android:textSize="15sp"
                android:background="#CACACA" />

        </TableRow>

        <TableRow  android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textViewThread03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="4dp"
                android:text="@string/editTextThread03"
                />

            <EditText
                android:id="@+id/editTextThread03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_margin="4dp"
                android:inputType="none"
                android:textSize="15sp"
                android:background="#CACACA" />

        </TableRow>

        <TableRow  android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textViewThread04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="4dp"
                android:text="@string/editTextThread04"
                />

            <EditText
                android:id="@+id/editTextThread04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_margin="4dp"
                android:inputType="none"
                android:textSize="15sp"
                android:background="#CACACA" />

        </TableRow>
    </TableLayout>

</LinearLayout>